--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,7 @@
 # For details, see https://github.com/devcontainers/images/tree/main/src/ruby
 FROM mcr.microsoft.com/devcontainers/ruby:1-3.2-bullseye
 
-# Install Extism
-RUN curl -L https://github.com/extism/cli/releases/download/v0.3.1/extism-v0.3.1-linux-amd64.tar.gz --output extism.tar.gz
-RUN tar -xvf extism.tar.gz
-RUN mv extism /usr/local/bin
-RUN su vscode -c "extism lib install latest"
+
 
 # Install Rails
 # RUN gem install rails webdrivers
@@ -22,5 +18,11 @@ RUN gem install foreman
 
 # [Optional] Uncomment this line to install global node packages.
 RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g yarn" 2>&1
+
+# Install Extism
+RUN su vscode -c "curl -L https://github.com/extism/cli/releases/download/v0.3.1/extism-v0.3.1-linux-amd64.tar.gz --output extism.tar.gz"
+RUN su vscode -c "tar -xvf extism.tar.gz"
+RUN su vscode -c "mv extism /usr/local/bin"
+RUN su vscode -c "extism lib install latest"
 
 COPY welcome-message.txt /usr/local/etc/vscode-dev-containers/first-run-notice.txt
